[build-system]
requires = ["setuptools>=61.0", "loguru==0.7.0", "pyzmq==25.0.2", "zeroconf==0.62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integra"
version = "0.0.1"
authors = [
  { name="pmus", email="pmus.me@yandex.ru" },
]
description = "ZeroMQ Zeroconf RPC"
long_description = "ZeroMQ Zeroconf RPC"
long_description_content_type="text/markdown"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pmus"